--- a/index.html
+++ b/index.html
@@ -18,4 +18,6 @@
 
 <script src="main.js"></script>
 <script src="svg1.js"></script>
+<script src="svg2.js"></script>
 <script src="svg3.js"></script>
+<script src="svg4.js"></script>
