Add intro text div

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://d3js.org/d3.v5.js"></script>
 
-<title>NVDA History</title>
+<title>NVDA</title>
 <link href="default.css" rel="stylesheet" type="text/css">
 </head>
 <body onload='init()'>
-<svg id="svg1"></svg>
+<div id="intro-container"></div>
 <svg id="svg2"></svg>
 <svg id="svg3"></svg>
 <svg id="svg4"></svg>
@@ -17,7 +17,7 @@
 </html>
 
 <script src="main.js"></script>
-<script src="svg1.js"></script>
+<script src="div1.js"></script>
 <script src="svg2.js"></script>
 <script src="svg3.js"></script>
 <script src="svg4.js"></script>
