transition skip and div4

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="intro-container"></div>
 <svg id="svg2"></svg>
 <svg id="svg3"></svg>
-<svg id="svg4"></svg>
+<div id="outtro-container"></div>
 </body>
 </html>
 
@@ -20,4 +20,4 @@
 <script src="div1.js"></script>
 <script src="svg2.js"></script>
 <script src="svg3.js"></script>
-<script src="svg4.js"></script>
+<script src="div4.js"></script>
