--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <link href="default.css" rel="stylesheet" type="text/css">
 </head>
 <body onload='init()'>
-<div id="intro-container"></div>
-<svg id="svg2"></svg>
+<div id="intro-container">
+    <h2>(Mouse click anywhere to load or end a scene)</h2>
+</div>
+<div>
 <svg id="svg3"></svg>
+</div>
+<svg id="svg2"></svg>
 <div id="outtro-container"></div>
 </body>
 </html>
